# Py3R-Pose

./: LICENSE  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yml  unit-tests.yml
docs/: _config.yml  index.md
src/py3r/point_tracking/core/filtering/: arena_filter.py  composite_filter.py  confidence_filter.py  instance_type_filter.py  label_filter.py  median_filter.py  pose_filter.py  sequential_filter.py
src/py3r/point_tracking/core/model/: composite_pose_model.py  mock_pose_model.py  pose_model.py
src/py3r/point_tracking/core/serialization/: csv_reader.py  dynamic_csv_writer.py  json_writer.py  static_csv_writer.py
src/py3r/point_tracking/core/streaming/: pose_estimation_transform.py  pose_filter_transform.py  pose_render_transform.py  pose_results_file_observer.py
src/py3r/point_tracking/core/tracking/: fixed_instances_tracker.py
src/py3r/point_tracking/core/types/: __init__.py  instance.py  instance_type.py  point.py
src/py3r/point_tracking/core/visualization/: pose_renderer.py
src/py3r/pose/cli/: __init__.py  concat_job.py  filter_chain_builder.py  filter_chain_parser.py  filter_registry.py  image_display.py  intermittent_pose_model.py  limit_rate.py  merge_job.py  model_repository.py  operators.py  prediction_job.py  preview_pace.py  progress_bar_observer.py  render_job.py  zip_by_index.py  zip_longest.py
src/py3r/pose/core/: observe_on_bounded.py
src/py3r/pose/core/filtering/: arena_filter.py  confidence_filter.py  instance_type_filter.py  median_filter.py  pose_filter.py  sequential_filter.py
src/py3r/pose/core/model/: composite_pose_model.py  mock_pose_model.py  pose_model.py
src/py3r/pose/core/serialization/: csv_reader.py  dynamic_csv_writer.py  json_writer.py  static_csv_writer.py
src/py3r/pose/core/streaming/: filter_poses.py  pose_estimation_transform.py  pose_filter_transform.py  pose_render_transform.py  pose_results_file_observer.py  pose_results_observable.py  predict_poses.py  render_poses.py
src/py3r/pose/core/tracking/: fixed_instances_tracker.py
src/py3r/pose/core/types/: __init__.py  instance.py  point.py
src/py3r/pose/core/visualization/: pose_renderer.py
src/py3r/pose/yolo/model/: yolo_batch_stager.py  (+2 more)
tests/: test_prediction_job.py
(+19 files in other folders)
