[build-system]
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py3r_point_tracking_core"
version = "0.2.0"
authors = [
  { name="Marcel Schmutz", email="mschmut@ethz.ch" },
]
description = "Lightweight core library for pose estimation and pose analysis in the ETH Zurich 3R Hub"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy >= 2",
    "opencv-python >= 4"
]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["py3r.point_tracking.core*"]