[build-system]
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py3r_pose_core"
version = "0.3.2"
authors = [
  { name="Marcel Schmutz", email="mschmut@ethz.ch" },
]
description = "Lightweight core library for pose estimation and pose analysis in the ETH Zurich 3R Hub"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "py3r_media @ git+https://github.com/ETHZ-INS/Py3R-Media.git@master",
    "numpy >= 2",
    "opencv-python >= 4",
    "reactivex >= 4.0.0",
]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["py3r.pose.core*"]
